checkout media query

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 		<link rel="stylesheet" href="./css/products/product.css">
 		<link rel="stylesheet" href="./css/products/productskids.css">
 		<link rel="stylesheet" href="./css/main/productinfo.css">
+		<link rel="stylesheet" href="./css/main/checkout.css">
 		<title>Just Do It</title>
 	</head>
 	<body>
